--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^9.2.0
+
 
 dev_dependencies:
   flutter_test:
@@ -17,12 +19,17 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #  - images/a_dot_ham.jpeg
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
+  fonts:
+    - family: circular
+      fonts:
+          - asset: assets/fonts/CircularStd-Medium.ttf
+          - asset: assets/fonts/CircularAir-Light.ttf
+            weight: 100
+          - asset: assets/fonts/CircularStd-Bold.ttf
+            weight: 500
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
